# gilded-groom

back-end/: .gitignore  Cargo.toml
back-end/migrations/2023-12-17-052045_create_user/: up.sql
back-end/migrations/2023-12-23-011448_create_user_history/: up.sql
back-end/migrations/2023-12-23-031031_create_comment/: up.sql
back-end/migrations/2023-12-23-031427_create_comment_history/: down.sql  up.sql
back-end/migrations/2023-12-23-035111_service/: up.sql
back-end/migrations/2023-12-23-042831_create_service_history/: down.sql  up.sql
back-end/migrations/2023-12-23-043457_create_discovery_method/: down.sql  up.sql
back-end/migrations/2023-12-23-044106_create_discovery_method_history/: down.sql  up.sql
back-end/migrations/2023-12-23-044747_create_customer/: up.sql
back-end/migrations/2023-12-23-045200_create_customer_comment/: down.sql  up.sql
back-end/migrations/2023-12-23-045942_create_customer_history/: down.sql  up.sql
back-end/migrations/2023-12-23-204223_add_active_booleans/: down.sql  up.sql
back-end/src/: main.rs  schema.rs
back-end/src/enums/: operation.rs
back-end/src/models/: comment.rs  customer.rs  discovery_method.rs  mod.rs  service.rs  user.rs
back-end/src/models/comment/: customer.rs  mod.rs
back-end/src/models/history/: comment.rs  customer.rs  discovery_method.rs  mod.rs  service.rs  user.rs
back-end/src/routes/: auth.rs
back-end/src/routes/auth/: mod.rs  response.rs  routes.rs  service.rs
back-end/src/structs/: api_response.rs  mod.rs
