[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.31"
byteorder = "1.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }